Update jdk_learning.md